--- a/home.html
+++ b/home.html
@@ -101,8 +101,88 @@
             <button class="overview-button">Properties</button>
         </div>
         <div class="projects-grid">
-            <!-- Single Card -->
+            <!-- Single Card -->   
             <div class="project-card fade-in">
+            <div class="project-image">
+                <img src="L&T-Realty-Elara-celestia.jpg" alt="">
+                <span class="project-status">UNDERCONSTRUCTION</span>
+            </div>
+            <div class="project-info">
+                <h3>L&T Realty Elara Celestia</h3>
+                <p>Hebbal, North Bangalore</p>
+                <strong>Rs.2.7 Cr* Onwards</strong>
+                <div class="project-specs">
+                <p>3 BHK S, 3 BHK L, 4 BHK</p>
+                <p>1002 – 2108 Sq.Ft</p>
+                <p><a href="#">🏢 Apartment</a></p>
+                </div>
+            </div>
+            </div>
+            <div class="project-card fade-in">
+            <div class="project-image">
+                <img src="Brigade-Valencia.jpg" alt="">
+                <span class="project-status">UNDERCONSTRUCTION</span>
+            </div>
+            <div class="project-info">
+                <h3>Brigade Valencia</h3>
+                <p>Kithaganahalli, Bengaluru</p>
+                <strong>Rs.2 Cr* Onwards</strong>
+                <div class="project-specs">
+                <p>3 BHK, 4 BHK</p>
+                <p>1147 – 2540 Sq.Ft</p>
+                <p><a href="#">🏢 Apartment</a></p>
+                </div>
+            </div>
+            </div>
+            <div class="project-card fade-in">
+            <div class="project-image">
+                <img src="Brigade-Insignia.jpg" alt="">
+                <span class="project-status">UNDERCONSTRUCTION</span>
+            </div>
+            <div class="project-info">
+                <h3>Brigade Insignia</h3>
+                <p>Yelahanka, North Bengaluru</p>
+                <strong>Rs.3.19 Cr* Onwards</strong>
+                <div class="project-specs">
+                <p>3 BHK, 4 BHK, 5 BHK</p>
+                <p>2145 – 5947 Sq.Ft</p>
+                <p><a href="#">🏢 Apartment</a></p>
+                </div>
+            </div>
+            </div>
+            <div class="project-card fade-in">
+            <div class="project-image">
+                <img src="Radiance Platinum.jpg" alt="">
+                <span class="project-status">UNDERCONSTRUCTION</span>
+            </div>
+            <div class="project-info">
+                <h3>Radiance Platinum</h3>
+                <p>Koramangala, Bangalore</p>
+                <strong>Rs.3.47 Cr* Onwards</strong>
+                <div class="project-specs">
+                <p>3 BHK, 4 BHK</p>
+                <p>2286 – 3064 Sq.Ft</p>
+                <p><a href="#">🏢 Apartment</a></p>
+                </div>
+            </div>
+            </div>
+            <div class="project-card fade-in">
+            <div class="project-image">
+                <img src="TVS-Emerald-Cascadia.jpg" alt="">
+                <span class="project-status">UNDERCONSTRUCTION</span>
+            </div>
+            <div class="project-info">
+                <h3>TVS Emerald Cascadia</h3>
+                <p>Mission Road, Bengaluru</p>
+                <strong>Rs.8.49 Cr* Onwards</strong>
+                <div class="project-specs">
+                <p>4 BHK</p>
+                <p>2441 – 5886 Sq.Ft</p>
+                <p><a href="#">🏢 Apartment</a></p>
+                </div>
+            </div>
+            </div>
+            <!--<div class="project-card fade-in">
             <div class="project-image">
                 <img src="Radiance-Eternity.jpg" alt="Radiance Eternity">
                 <span class="project-status">UNDERCONSTRUCTION</span>
@@ -117,87 +197,7 @@
                 <p><a href="#">🏢 Apartment</a></p>
                 </div>
             </div>
-            </div>
-            <div class="project-card fade-in">
-            <div class="project-image">
-                <img src="Radiance-Eternity.jpg" alt="Radiance Eternity">
-                <span class="project-status">UNDERCONSTRUCTION</span>
-            </div>
-            <div class="project-info">
-                <h3>Radiance Eternity</h3>
-                <p>Thoraipakkam, Chennai</p>
-                <strong>Rs.1.69 Cr* Onwards</strong>
-                <div class="project-specs">
-                <p>2 BHK, 3 BHK, 4 BHK, 5 BHK</p>
-                <p>1356 – 2711 Sq.Ft</p>
-                <p><a href="#">🏢 Apartment</a></p>
-                </div>
-            </div>
-            </div>
-            <div class="project-card fade-in">
-            <div class="project-image">
-                <img src="Radiance-Eternity.jpg" alt="Radiance Eternity">
-                <span class="project-status">UNDERCONSTRUCTION</span>
-            </div>
-            <div class="project-info">
-                <h3>Radiance Eternity</h3>
-                <p>Thoraipakkam, Chennai</p>
-                <strong>Rs.1.69 Cr* Onwards</strong>
-                <div class="project-specs">
-                <p>2 BHK, 3 BHK, 4 BHK, 5 BHK</p>
-                <p>1356 – 2711 Sq.Ft</p>
-                <p><a href="#">🏢 Apartment</a></p>
-                </div>
-            </div>
-            </div>
-            <div class="project-card fade-in">
-            <div class="project-image">
-                <img src="Radiance-Eternity.jpg" alt="Radiance Eternity">
-                <span class="project-status">UNDERCONSTRUCTION</span>
-            </div>
-            <div class="project-info">
-                <h3>Radiance Eternity</h3>
-                <p>Thoraipakkam, Chennai</p>
-                <strong>Rs.1.69 Cr* Onwards</strong>
-                <div class="project-specs">
-                <p>2 BHK, 3 BHK, 4 BHK, 5 BHK</p>
-                <p>1356 – 2711 Sq.Ft</p>
-                <p><a href="#">🏢 Apartment</a></p>
-                </div>
-            </div>
-            </div>
-            <div class="project-card fade-in">
-            <div class="project-image">
-                <img src="Radiance-Eternity.jpg" alt="Radiance Eternity">
-                <span class="project-status">UNDERCONSTRUCTION</span>
-            </div>
-            <div class="project-info">
-                <h3>Radiance Eternity</h3>
-                <p>Thoraipakkam, Chennai</p>
-                <strong>Rs.1.69 Cr* Onwards</strong>
-                <div class="project-specs">
-                <p>2 BHK, 3 BHK, 4 BHK, 5 BHK</p>
-                <p>1356 – 2711 Sq.Ft</p>
-                <p><a href="#">🏢 Apartment</a></p>
-                </div>
-            </div>
-            </div>
-            <div class="project-card fade-in">
-            <div class="project-image">
-                <img src="Radiance-Eternity.jpg" alt="Radiance Eternity">
-                <span class="project-status">UNDERCONSTRUCTION</span>
-            </div>
-            <div class="project-info">
-                <h3>Radiance Eternity</h3>
-                <p>Thoraipakkam, Chennai</p>
-                <strong>Rs.1.69 Cr* Onwards</strong>
-                <div class="project-specs">
-                <p>2 BHK, 3 BHK, 4 BHK, 5 BHK</p>
-                <p>1356 – 2711 Sq.Ft</p>
-                <p><a href="#">🏢 Apartment</a></p>
-                </div>
-            </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- Swiper HTML (Place this above footer section) -->
@@ -206,23 +206,40 @@
             <div class="swiper-wrapper">
             <!-- Slide 1 -->
             <div class="swiper-slide">
-                <div class="slide-image" style="background-image: url('Prestige-Pallavaram-Gardens.jpg');"></div>
+                <div class="slide-image" style="background-image: url('Brigade-Insignia.jpg');"></div>
                 <div class="slide-content">
                 <h2>Check Out Our <br> Featured Items</h2>
                 <div class="info-card">
-                    <h3>Prestige Pallavaram Gardens</h3>
-                    <p class="location">Pallavaram, Chennai</p>
-                    <p class="description">Premium Residences on 200ft Pallavaram – Thoraipakkam Radial Road. Strategically located just minutes away from...</p>
+                    <h3>Brigade Insignia</h3>
+                    <p class="location">Yelahanka, North Bengaluru</p>
+                    <p class="description">Premium Residences from 2145 – 5947 Sq.Ft at Rs.3.19 Cr* Onwards...</p>
                     <ul>
-                    <li><i class="fa fa-bed"></i> 2 BHK, 3 BHK, 4 BHK</li>
-                    <li><i class="fa fa-ruler-combined"></i> 1000 - 2733 Sqft</li>
+                    <li><i class="fa fa-bed"></i> 3 BHK, 4 BHK, 5 BHK</li>
+                    <li><i class="fa fa-ruler-combined"></i> 2145 – 5947 Sq.Ft</li>
                     <li><i class="fa fa-building"></i> Apartment</li>
                     </ul>
-                    <p class="price">Rs.1.20 Cr* Onwards</p>
+                    <p class="price">Rs.3.19 Cr* Onwards</p>
                 </div>
                 </div>
             </div>
             <div class="swiper-slide">
+                <div class="slide-image" style="background-image: url('Brigade-Valencia.jpg');"></div>
+                <div class="slide-content">
+                <h2>Check Out Our <br> Featured Items</h2>
+                <div class="info-card">
+                    <h3>Brigade Valencia</h3>
+                    <p class="location">Kithaganahalli, Bengaluru</p>
+                    <p class="description">Premium Residences on from 1147 – 2540 Sq.Ft at Rs.2 Cr* Onwards...</p>
+                    <ul>
+                    <li><i class="fa fa-bed"></i> 3 BHK, 4 BHK</li>
+                    <li><i class="fa fa-ruler-combined"></i> 1147 – 2540 Sqft</li>
+                    <li><i class="fa fa-building"></i> Apartment</li>
+                    </ul>
+                    <p class="price">Rs.2 Cr* Onwards</p>
+                </div>
+                </div>
+            </div>
+            <!--<div class="swiper-slide">
                 <div class="slide-image" style="background-image: url('Prestige-Pallavaram-Gardens.jpg');"></div>
                 <div class="slide-content">
                 <h2>Check Out Our <br> Featured Items</h2>
@@ -238,24 +255,7 @@
                     <p class="price">Rs.1.20 Cr* Onwards</p>
                 </div>
                 </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="slide-image" style="background-image: url('Prestige-Pallavaram-Gardens.jpg');"></div>
-                <div class="slide-content">
-                <h2>Check Out Our <br> Featured Items</h2>
-                <div class="info-card">
-                    <h3>Prestige Pallavaram Gardens</h3>
-                    <p class="location">Pallavaram, Chennai</p>
-                    <p class="description">Premium Residences on 200ft Pallavaram – Thoraipakkam Radial Road. Strategically located just minutes away from...</p>
-                    <ul>
-                    <li><i class="fa fa-bed"></i> 2 BHK, 3 BHK, 4 BHK</li>
-                    <li><i class="fa fa-ruler-combined"></i> 1000 - 2733 Sqft</li>
-                    <li><i class="fa fa-building"></i> Apartment</li>
-                    </ul>
-                    <p class="price">Rs.1.20 Cr* Onwards</p>
-                </div>
-                </div>
-            </div>
+            </div>-->
 
             <!-- Add more .swiper-slide blocks here for more slides -->
 
