--- a/home.html
+++ b/home.html
@@ -88,6 +88,7 @@
                 <p>3 BHK S, 3 BHK L, 4 BHK</p>
                 <p>1002 – 2108 Sq.Ft</p>
                 <p><a href="#">🏢 Apartment</a></p>
+                <button class="enquire-btn">Enquire</button>
                 </div>
             </div>
             </div>
@@ -104,6 +105,7 @@
                 <p>3 BHK, 4 BHK</p>
                 <p>1147 – 2540 Sq.Ft</p>
                 <p><a href="#">🏢 Apartment</a></p>
+                <button class="enquire-btn">Enquire</button>
                 </div>
             </div>
             </div>
@@ -120,6 +122,7 @@
                 <p>3 BHK, 4 BHK, 5 BHK</p>
                 <p>2145 – 5947 Sq.Ft</p>
                 <p><a href="#">🏢 Apartment</a></p>
+                <button class="enquire-btn">Enquire</button>
                 </div>
             </div>
             </div>
@@ -136,6 +139,7 @@
                 <p>3 BHK, 4 BHK</p>
                 <p>2286 – 3064 Sq.Ft</p>
                 <p><a href="#">🏢 Apartment</a></p>
+                <button class="enquire-btn">Enquire</button>
                 </div>
             </div>
             </div>
@@ -153,6 +157,7 @@
                 <p>2441 – 5886 Sq.Ft</p>
                 <p><a href="#">🏢 Apartment</a></p>
                 </div>
+                <button class="enquire-btn">Enquire</button>
             </div>
             </div>
             <!--<div class="project-card fade-in">
@@ -192,6 +197,7 @@
                     <li><i class="fa fa-building"></i> Apartment</li>
                     </ul>
                     <p class="price">Rs.3.19 Cr* Onwards</p>
+                    <button class="enquire-btn">Enquire</button>
                 </div>
                 </div>
             </div>
@@ -209,6 +215,7 @@
                     <li><i class="fa fa-building"></i> Apartment</li>
                     </ul>
                     <p class="price">Rs.2 Cr* Onwards</p>
+                    <button class="enquire-btn">Enquire</button>
                 </div>
                 </div>
             </div>
@@ -223,6 +230,10 @@
             <div class="swiper-pagination"></div>
         </div>
     </section>
+    <!-- WHATSAPP FLOATING BUTTON -->
+    <a href="https://api.whatsapp.com/send?phone=917550098989&text=*Intrested%20in*%0aMedsea" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" />
+    </a>
     <footer class="footer-section">
         <div class="footer-container">
             <div class="footer-col contact-info">
@@ -278,6 +289,20 @@
             </p>
         </div>
     </footer>
+    <!-- ENQUIRY POPUP -->
+    <div id="enquiryPopup" class="enquiry-popup">
+        <div class="enquiry-popup-content">
+            <span id="closePopup" class="close-btn">&times;</span>
+            <h3>Enquire Now</h3>
+            <form>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <input type="tel" placeholder="Your Phone Number" required>
+            <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+
     <!-- Swiper JS -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="home.js"></script>
