--- a/home.html
+++ b/home.html
@@ -294,12 +294,13 @@
         <div class="enquiry-popup-content">
             <span id="closePopup" class="close-btn">&times;</span>
             <h3>Enquire Now</h3>
-            <form>
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <input type="tel" placeholder="Your Phone Number" required>
+            <form action="enquiry.php" method="POST" id="enquiryForm">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <input type="tel" name="mobile" placeholder="Your Phone Number" required>
             <button type="submit">Submit</button>
             </form>
+            <p id="successMessage" style="display: none; color: green; font-weight: bold;">Thank you! We received your enquiry.</p>
         </div>
     </div>
 
